# savitur

./: .dockerignore  .gitignore  CHART_IMPROVEMENTS.md  calculate_birth_data.py  debug_ayanamsa.py  debug_ayanamsa_repro.py  debug_ayanamsa_v2.py  debug_planets.py  fix_drik.py  json_output.txt  markdown_output_v2.txt  nava_thaara_test.txt  package.json  pyproject.toml  railway.json  render.yaml  requirements.txt  simple_test.py  start_all.ps1  test_after_wait.ps1  test_api.py  test_api_repro.py  test_drik_output.py  test_jd_conversion.py  test_strength_calcs.py  test_warn.py  toon_output.txt  toon_output_v2.txt  vercel.json  verify_ayanamsa_values.py  verify_frontend_fix.js  verify_ss_ayanamsa.py
.cursor/rules/: web-development.mdc
PyJHora/: QUICK_START.md  example_usage.py
PyJHora/src/jhora/: const.py
api/: index.py
web-app/backend/: Dockerfile  README.md  main.py  requirements.txt  start_server.ps1  test_all_api.py  test_api.py  test_jyotichart.py
web-app/backend/app/: __init__.py
web-app/backend/app/models/: schemas.py
web-app/backend/app/services/: ai_export_service.py  astrology_chart_generator.py  (+11 more)
web-app/backend/temp_jyotichart/: northindianchart.py
web-app/frontend/: PANCHANGA_PAGE_IMPLEMENTATION.md  components.json  next.config.mjs  package-lock.json  package.json  requirements.txt  tailwind.config.ts
web-app/frontend/api/: index.py
web-app/frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web-app/frontend/components/: ThemeToggle.tsx
web-app/frontend/lib/: utils.ts
web-app/frontend/types/: tanstack-react-query.d.ts
(+45 files in other folders)
